test/types/range/vass/indexorder-nofirst-1.good
indexorder-nofirst-1.chpl:2: error: halt reached - invoking indexOrder on a range (..) that does not have the first index
