test/types/range/vass/indexorder-nofirst-1.chpl

const i = (..).indexOrder(5);
writeln(i);
